# ramlink-updi-example

./: Cargo.toml  README.md
consumer/: README.md
producer/: Cargo.toml  README.md
producer/avr-specs/: avr-attiny402.json
producer/src/: main.rs
src/: crc16.rs  jtagmk2.rs  main.rs
