[package]
name = "rust-jtag-mkii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
ramlink = { version = "0.1.0", path = "../rust-ramlink", features=["consumer"] }
serialport = "4.3.0"
