[package]
name = "tiny402-test"
version = "0.1.0"
authors = ["Frank Villaro-Dixon <frank@villaro-dixon.eu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tiny402-test"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
ravedude = "0.1.6"
ramlink = { version = "0.1.0", path = "../../../github.com/frankkkkk/rust-ramlink", features=["producer"] }


[dependencies.avr-device]
version = "0.5.3"
features = ["attiny402", "rt"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
strip = "debuginfo"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
strip = "debuginfo"
